Fix low contrast

--- a/src/modules/navigation/m3-nav-drawer-rail/m3-nav-drawer-rail.component.scss
+++ b/src/modules/navigation/m3-nav-drawer-rail/m3-nav-drawer-rail.component.scss
@@ -22,7 +22,8 @@ $rail-label-padding: 8px;
 mat-drawer-container {
   width: 100%;
   height: 100%;
-
+  background-color: var(--md-sys-color-surface-container-lowest);
+  color: var(--md-sys-color-on-surface);
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
 
